---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
---
***Setup***

create schema private;

create table public.users (
    id serial primary key,
    name text
);

create table public.audio_books (
    id serial primary key,
    narrator text
);

create table private.audio_books (
    id serial primary key,
    narrator_id text
);


--------------

select * from (
    |
) as subquery
join public.users u
on u.id = subquery.id;
select * from (
    s|
) as subquery
join public.users u
on u.id = subquery.id;
select * from (
    select |
) as subquery
join public.users u
on u.id = subquery.id;

Results:
id - public.audio_books.id (Column)
name - public.users.name (Column)
narrator - public.audio_books.narrator (Column)
id - private.audio_books.id (Column)
narrator_id - private.audio_books.narrator_id (Column)

--------------

select * from (
    select i|
) as subquery
join public.users u
on u.id = subquery.id;

Results:
id - public.audio_books.id (Column)
narrator_id - private.audio_books.narrator_id (Column)
iclikejoinsel - Schema: pg_catalog.iclikejoinsel (Function)
iclikesel - Schema: pg_catalog.iclikesel (Function)
icnlikejoinsel - Schema: pg_catalog.icnlikejoinsel (Function)

--------------

select * from (
    select id, |
) as subquery
join public.users u
on u.id = subquery.id;
**Should prefer the one from private.audio_audiobooks, since the other tables are out of scope.**

Results:
name - public.users.name (Column)
narrator - public.audio_books.narrator (Column)
narrator_id - private.audio_books.narrator_id (Column)
id - public.audio_books.id (Column)
pg_catalog.RI_FKey_cascade_del() - Schema: pg_catalog.RI_FKey_cascade_del (Function)

--------------

select * from (
    select id, n|
) as subquery
join public.users u
on u.id = subquery.id;
**Should prefer the one from private.audio_audiobooks, since the other tables are out of scope.**

Results:
name - public.users.name (Column)
narrator - public.audio_books.narrator (Column)
narrator_id - private.audio_books.narrator_id (Column)
name - Schema: pg_catalog.name (Function)
nameconcatoid - Schema: pg_catalog.nameconcatoid (Function)

--------------

select * from (
    select id, narrator_id |
) as subquery
join public.users u
on u.id = subquery.id;
select * from (
    select id, narrator_id f|
) as subquery
join public.users u
on u.id = subquery.id;
select * from (
    select id, narrator_id from |
) as subquery
join public.users u
on u.id = subquery.id;

Results:
audio_books - public.audio_books (Table)
users - public.users (Table)
private - private (Schema)
private.audio_books - private.audio_books (Table)
information_schema - information_schema (Schema)

--------------

select * from (
    select id, narrator_id from p|
) as subquery
join public.users u
on u.id = subquery.id;

Results:
public - public (Schema)
private - private (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)
information_schema.parameters - information_schema.parameters (Table)

--------------

select * from (
    select id, narrator_id from private.|
) as subquery
join public.users u
on u.id = subquery.id;

Results:
audio_books - private.audio_books (Table)

--------------

select * from (
    select id, narrator_id from private.a|
) as subquery
join public.users u
on u.id = subquery.id;

Results:
audio_books - private.audio_books (Table)

--------------

select * from (
    select id, narrator_id from private.audio_books |
) as subquery
join public.users u
on u.id = subquery.id;
